bugfix() move header background on small devices

--- a/main.css
+++ b/main.css
@@ -524,7 +524,7 @@ a:active {
   }
 
   .page-header {
-    background-position: 0 top;
+    background-position: 35% bottom;
   }
 
   .navbar-sticky {
